<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="base_test">测试文字</string>
    <string name="app_name">AiStore</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="base_null"></string>
    <!-- 导航栏 -->
    <string name="but_home">首页</string>
    <string name="but_class">分类</string>
    <string name="but_shopcart">购物车</string>
    <string name="but_my">我</string>
    <!-- 分类栏 -->
    <string name="titleTV">女性用品</string>
    <string name="fclass_home_title">分类</string>
    <!-- 首页 -->
    <string name="home_woman_used">女性用品</string>
    <string name="home_man_used">男性用品</string>
    <string name="home_neiyi_used">情趣内衣</string>
    <string name="home_tt_used">安全套</string>
    <string name="home_tosex_used">双人情趣</string>
    <string name="home_woman_like">猜你喜欢</string>
    <string name="home_woman_text">女用</string>
    <string name="home_man_text">男用</string>
    <string name="home_neiyi_text">内衣</string>
    <string name="home_tt_text">安全套</string>
    <string name="home_runhua_text">润滑</string>
    <string name="home_tosex_text">双人</string>
    <string name="home_more_text">更多</string>
    <!-- 购物车 -->
    <string name="shopcart_title">购物车</string>
    <string name="shopcart_isnull">购物车里为空，点击刷新</string>
    <string name="shopcart_delete">删除</string>
    <string name="shopcart_see_again">再逛逛</string>
    <string name="shopcart_gopay">去结算</string>
    <string name="shopcart_gongji">共计:</string>
    <string name="shopcart_kucun">库存:</string>
    <string name="updata_shopcart_info_success">同步信息成功</string>

    <!-- 收货人信息 -->
    <string name="consignee_info">收货人信息</string>
    <string name="consignee_consignee">收货人</string>
    <string name="consignee_number">手机号码</string>
    <string name="consignee_address">详细地址</string>
    <string name="consignee_save">确认保存</string>
    <string name="consignee_number_can_not_null">手机号不能为空</string>
    <string name="consignee_check_number_type">请检查手机号格式</string>
    <string name="consignee_consignee_can_not_null">收货人不能为空</string>
    <string name="consignee_address_can_not_null">地址不能为空</string>

    <!-- 结算订单 -->
    <string name="order_gopay_title">结算订单</string>
    <string name="order_goods_list">商品清单</string>
    <string name="order_goods_receipt">收货信息</string>
    <string name="order_pay_type">付款方式</string>
    <string name="order_distribution_time">配送时间</string>
    <string name="order_goods_price">商品总价</string>
    <string name="order_express_cost">快递费用</string>
    <string name="order_final_pay">最终支付</string>
    <string name="order_commit">提交订单</string>
    <string name="order_zhifubao">支付宝转账</string>
    <string name="order_huodao">货到付款</string>
    <string name="commit_order_for_huodao">已提交订单，请等待发货</string>
    <string name="order_gongzuo_xiuxi">工作日、双休日和假日，均可送货</string>
    <string name="order_xiuxi">双休日（周六、周日）</string>
    <string name="order_gopnzuo">工作日（周一至周五）</string>

    <!-- 全部订单 -->
    <string name="all_order_title">全部订单</string>
    <string name="order_isnull">还没有订单哦！</string>
    <string name="all_order_item_number">订单号：</string>
    <string name="all_order_item_type">支付方式：</string>
    <string name="all_order_item_type_zhifubao">支付宝支付</string>
    <string name="all_order_item_statu">订单状态：</string>
    <string name="all_order_item_time">下单时间：</string>
    <string name="all_order_item_title">订单:</string>

    <!-- 订单详情 -->
    <string name="order_details_title">订单详情</string>
    <string name="order_details_number">数量：</string>
    <string name="order_details_shouhuo_info">收货信息</string>
    <string name="order_details_oeder_money">订单金额:</string>
    <string name="order_details_oeder_pp">收货人:</string>
    <string name="order_details_oeder_tel">电话:</string>
    <string name="order_details_oeder_address">收获地址:</string>
    <string name="order_details_statu">订单状态：</string>
    <string name="order_details_youfei_l">（邮费:</string>
    <string name="order_details_youfei_r">）</string>
    <string name="order_details_cancel">取消订单</string>
    <string name="order_details_gopay">去支付</string>

    <!-- 搜索 -->
    <string name="search_et_text">请输入关键词</string>
    <string name="search_bt_text">搜索</string>
    <string name="search_result_comments">评论</string>
    <string name="search_result_popularity">按人气</string>
    <string name="search_result_number">按销量</string>
    <string name="search_result_price">按价格</string>
    <!-- 产品详情 -->
    <string name="product_title">产品详情</string>
    <string name="product_add_shopcart">加入购物车</string>
    <string name="product_pay_now">立即购买</string>
    <string name="product_image_text">图文详情</string>
    <string name="product_user_comments">用户评论</string>
    <string name="product_user_comments_fans">粉丝：</string>
    <string name="product_user_comments_likes">喜欢</string>
    <string name="product_call_text">官方热线:</string>
    <string name="product_call_number">400-096-5585</string>
    <string name="product_sms_text">短信订购</string>
    <string name="product_sms_number">13331054189</string>
    <string name="product_iscall">是否呼叫？</string>
    <string name="product_issms">是否发送短信？</string>
    <string name="product_cancle">取消</string>
    <string name="product_sms_send">发送</string>
    <string name="product_cll_tell">呼叫</string>
    <string name="product_add_shopcart_success">已加入购物车</string>

    <!-- 个人中心 -->
    <string name="mycenter_home_all_dingdan">全部订单</string>
    <string name="mycenter_home_youhuiquan">优惠券</string>
    <string name="mycenter_home_zaixiankehu">在线客服</string>
    <string name="mycenter_home_geren_set">个人设置</string>
    <string name="mycenter_login_out">退出登录</string>

    <!-- 登陆和注册 -->
    <string name="my_login_tv">登陆</string>
    <string name="my_login_ID_tv">账号:</string>
    <string name="my_login_ID_et">请输入您的账号</string>
    <string name="my_login_password_tv">密码:</string>
    <string name="my_login_password_et">请输入您的密码</string>
    <string name="login_register_link">没有帐号？ <a href="#">点击注册</a></string>
    
    <string name="my_regist_tv">注册</string>
    <string name="my_regist_ID_tv">手机/邮箱:</string>
    <string name="my_regist_ID_et">手机号码或者邮箱</string>
    <string name="my_regist_password_tv">登陆密码:</string>
    <string name="my_regist_password_et">密码为字母数字组合，至少4位</string>
    <string name="my_regist_repassword_tv">确认密码:</string>
    <string name="my_regist_repassword_et">请再输一次密码</string>
    
    
    <string name="login_id_not_null">账号必须输入</string>
    <string name="login_password_not_null">密码必须输入</string>
    <string name="login_format_error">账号为手机号或者邮箱</string>
    <string name="regist_repassword_not_null">确认密码不能为空</string>
    <string name="regist_repasswors_error">确认密码与密码不一致，请重新输入</string>
    <string name="regist_format_error">请输入正确的账号格式，手机号或邮箱</string>
    <string name="regist_error">注册失败</string>
    <string name="login_error">输入的用户名或密码有问题</string>
    <string name="regist_succeed">注册成功，请登录</string>
    <string name="login_succeed">登录成功</string>
     <!-- 个人设置 -->
    <string name="my_setting_changepassword">修改密码</string>
    <string name="my_setting_exitID">退出登录</string>
    
    <!-- NetREquest -->
    <string name="http_status_code_error">请求失败</string>
    <string name="net_work_is_error">网络异常，请检查网络</string>
    <!-- pay -->
    <string name="pay_tishi">提示</string>
    <string name="pay_queding">确定</string>
    <string name="pay_paying">正在支付</string>
    <string name="pay_paying_ok">已确认 未发货 已付款</string>
    <string name="pay_order_changed">您的订单信息已被非法篡改。</string>

    <!-- xlistview -->

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="page_is_final">最后一页了，亲</string>

</resources>