<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_ccc_line"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/all_order_item_title"
                    android:textColor="@color/home_text_red"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/order_detail_number_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/all_order_item_title"
                    android:textColor="@color/home_text_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/order_details_statu"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/order_detail_statu_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/base_test"
                    android:textColor="@color/home_text_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/all_order_item_time"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/order_detail_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/base_test"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <com.youai.aistore.Order.OrderListview
            android:id="@+id/order_detail_listview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000"
            android:divider="#00000000"
            android:fadingEdge="vertical"
            android:padding="5dp"
            android:scrollbars="none" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_ccc_line"
            android:orientation="vertical"
            android:padding="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_details_shouhuo_info"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_details_oeder_pp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/order_detail_pp_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/base_test"
                    android:textColor="@color/home_text_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/order_details_oeder_tel"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/order_detail_tel_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/base_test"
                    android:textColor="@color/home_text_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_details_oeder_money"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/order_detail_money_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/base_test"
                    android:textColor="@color/home_text_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_details_youfei_l"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/order_detail_youfei_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/base_test"
                    android:textColor="@color/home_text_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_details_youfei_r"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_details_oeder_address"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/order_detail_address_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:text="@string/base_test"
                    android:textColor="@color/home_text_red" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_detail_gopay_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
             >

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_red"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/order_details_cancel"
                android:textColor="@color/white" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_red"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/order_details_gopay"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>